hphp/hack/test/typecheck/case_type/recursive/subtyping_simple1b.php.exp
ERROR: File "subtyping_simple1b.php", line 4, characters 11-11:
Invalid constraint on `newtype` (Typing[4332])
  File "subtyping_simple1b.php", line 4, characters 16-16:
  Expected `A`
  File "subtyping_simple1b.php", line 4, characters 20-20:
  But got `mixed`. Using `mixed` instead of A because this is an illegal recursive use of A in the definition of A
ERROR: File "subtyping_simple1b.php", line 4, characters 11-11:
Invalid constraint on `newtype` (Typing[4332])
  File "subtyping_simple1b.php", line 4, characters 16-16:
  Expected `A`
  File "subtyping_simple1b.php", line 4, characters 20-20:
  But got `nonnull`. Using `mixed` instead of A because this is an illegal recursive use of A in the definition of A
ERROR: File "subtyping_simple1b.php", line 11, characters 17-18:
Invalid argument (Typing[4110])
  File "subtyping_simple1b.php", line 7, characters 24-29:
  Expected `string`
  File "subtyping_simple1b.php", line 4, characters 16-16:
  But got `mixed`. Using `mixed` instead of A because this is an illegal recursive use of A in the definition of A
ERROR: File "subtyping_simple1b.php", line 12, characters 12-13:
Invalid argument (Typing[4110])
  File "subtyping_simple1b.php", line 6, characters 19-19:
  Expected `A`
  File "subtyping_simple1b.php", line 9, characters 20-25:
  But got `string`
